2012-04-08 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCgen.c:
	  don't emit leading whitespaces in inline asm, 2nd try
	  fixed bug #3515390 - asm with leading whitespace passed to backends

2012-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix invalid reads.
	* src/z80/gen.c:
	  Fix a memory leak.

2012-04-07 Borut Razem <borut.razem AT gmail.com>

	* src/common.h, SDCCglobal.h: fixed mingw32 build on derna:
	  macros min and max should not be defined when compiled with C++
	* src/pic16/device.c, src/pic16/genarith.c, src/pic16/gen.c,
	  src/pic16/pcode.c, src/pic16/glue.c:
	  applied patch #3515647 - Correction patch on the PIC16's branch,
	  thanks to Molnar Karoly

2012-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Additional assertion to track down #3475617 and #3506333.

2012-04-06 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCgen.c, src/SDCCgen.h, src/SDCCralloc.hpp, src/common.h,
	  src/mcs51/gen.c, src/pic14/gen.c, src/z80/gen.c,
	  src/pic16/gen.c, src/ds390/gen.c, src/hc08/gen.c:
	  fixed NetBSD sparc64 build, code beautification,
	  additional unification of target code generation
	* support/cpp/configure.in, support/cpp/configure,
	  support/cpp/system.h: fixed sdcc configure include paths
	* src/SDCCgen.c: don't emit leading whitespaces in inline asm;
	  fixed bug #3515390 - asm with leading whitespace passed to backends

2012-04-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20080529-1.c:
	  Disable test for gcc older than 5.0.
	* src/z80/ralloc2.cc,
	  src/SDCCralloc.hpp,
	  src/z80/gen.h,
	  src/z80/gen.c:
	  Made optimal allocator less z80-specific.

2012-04-04 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/system.h, support/cpp/libiberty/filenames.h,
	  support/cpp/libiberty/md5.c, support/cpp/libiberty/obstack.h:
	  sdcpp partially synchronized with GCC CPP release version 4.7.0